[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/rects/rect_window.png" type="Texture" id=1]
[ext_resource path="res://art/fonts/picotron.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://main/component/scripts/window.gd" type="Script" id=3]
[ext_resource path="res://main/component/btn_basic.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/app_art/text editor/icon.png" type="Texture" id=5]
[ext_resource path="res://art/rects/rect_classic.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=6]
size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[node name="winidow" type="Control" groups=["window"]]
margin_left = 114.0
margin_top = 58.0
margin_right = 114.0
margin_bottom = 58.0
focus_mode = 2
script = ExtResource( 3 )

[node name="top_window" type="Control" parent="."]
margin_top = -12.0
margin_right = 401.0
margin_bottom = 1.0
rect_clip_content = true

[node name="ColorRect" type="ColorRect" parent="top_window"]
margin_left = -110.0
margin_top = 1.0
margin_right = 1032.0
margin_bottom = 217.0
mouse_filter = 2

[node name="window_name" type="Control" parent="top_window"]
margin_top = 12.0
margin_bottom = 12.0
mouse_filter = 2

[node name="Label" type="Label" parent="top_window/window_name"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 16.0
margin_top = -9.0
margin_right = 81.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 6 )
text = "Window name"

[node name="window_icon" type="Sprite" parent="top_window/window_name"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 8, -5 )
texture = ExtResource( 5 )

[node name="hover" type="Control" parent="."]
margin_top = -24.0
margin_right = 40.0
margin_bottom = 16.0
rect_clip_content = true
focus_mode = 1

[node name="control" type="Control" parent="hover"]
margin_left = 5.0
margin_top = 8.0
margin_right = 403.0
margin_bottom = 26.0
rect_clip_content = true

[node name="Button" type="Button" parent="hover/control"]
margin_left = 369.0
margin_top = 6.0
margin_right = 394.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "x"

[node name="Button2" type="Button" parent="hover/control"]
margin_left = 329.0
margin_top = 6.0
margin_right = 348.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "-"

[node name="Button3" type="Button" parent="hover/control"]
margin_left = 349.0
margin_top = 6.0
margin_right = 368.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 2 )

[node name="rect" type="NinePatchRect" parent="hover/control/Button3"]
margin_left = 5.0
margin_top = 2.0
margin_right = 14.0
margin_bottom = 8.0
texture = ExtResource( 6 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="hover_size" parent="." instance=ExtResource( 4 )]
margin_top = -11.0
margin_right = 337.0
margin_bottom = 1.0
mouse_filter = 0
mouse_default_cursor_shape = 13

[node name="container" type="NinePatchRect" parent="."]
margin_right = 403.0
margin_bottom = 229.0
rect_min_size = Vector2( 16, 16 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 1
input_pass_on_modal_close_click = false
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 5
patch_margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="container"]
show_behind_parent = true
margin_left = -113.0
margin_top = -70.0
margin_right = 1507.0
margin_bottom = 867.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.498039 )

[node name="ColorRect2" type="ColorRect" parent="container"]
margin_left = -113.0
margin_top = -1.0
margin_right = 565.0
margin_bottom = 6687.0
mouse_filter = 2

[connection signal="mouse_entered" from="hover" to="." method="_on_hover_mouse_entered"]
[connection signal="mouse_exited" from="hover" to="." method="_on_hover_mouse_exited"]
[connection signal="pressed" from="hover/control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="hover/control/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="hover/control/Button3" to="." method="_on_Button3_pressed"]
